fix: Swedish translations

--- a/erpnext/locale/sv.po
+++ b/erpnext/locale/sv.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: frappe\n"
 "Report-Msgid-Bugs-To: hello@frappe.io\n"
 "POT-Creation-Date: 2025-05-25 09:35+0000\n"
-"PO-Revision-Date: 2025-05-25 20:34\n"
+"PO-Revision-Date: 2025-05-27 20:41\n"
 "Last-Translator: hello@frappe.io\n"
 "Language-Team: Swedish\n"
 "MIME-Version: 1.0\n"
@@ -3997,7 +3997,7 @@ msgstr "Alla tilldelningar är avstämda"
 
 #: erpnext/support/doctype/issue/issue.js:109
 msgid "All communications including and above this shall be moved into the new Issue"
-msgstr "All konversation inklusive och ovanför detta ska flyttas till ny Ärende"
+msgstr "All kommunikation inklusive och ovanför detta ska flyttas till ny Ärende"
 
 #: erpnext/manufacturing/doctype/production_plan/production_plan.py:913
 msgid "All items are already requested"
@@ -9821,7 +9821,7 @@ msgstr "Leverantör Service"
 #. DocType 'CRM Settings'
 #: erpnext/crm/doctype/crm_settings/crm_settings.json
 msgid "Carry Forward Communication and Comments"
-msgstr "Vidarebefordra Konversation och Kommentarer"
+msgstr "Vidarebefordra Kommunikation och Kommentarer"
 
 #. Option for the 'Account Type' (Select) field in DocType 'Account'
 #. Option for the 'Type' (Select) field in DocType 'Mode of Payment'
@@ -10806,29 +10806,29 @@ msgstr "Vanlig Kod"
 #: erpnext/crm/workspace/crm/crm.json
 #: erpnext/setup/setup_wizard/operations/install_fixtures.py:249
 msgid "Communication"
-msgstr "Konversation"
+msgstr "Kommunikation"
 
 #. Label of the communication_channel (Select) field in DocType 'Communication
 #. Medium'
 #: erpnext/communication/doctype/communication_medium/communication_medium.json
 msgid "Communication Channel"
-msgstr "Konversation Kanal"
+msgstr "Kommunikation Kanal"
 
 #. Name of a DocType
 #: erpnext/communication/doctype/communication_medium/communication_medium.json
 msgid "Communication Medium"
-msgstr "Konversation Medium"
+msgstr "Kommunikation Medium"
 
 #. Name of a DocType
 #: erpnext/communication/doctype/communication_medium_timeslot/communication_medium_timeslot.json
 msgid "Communication Medium Timeslot"
-msgstr "Konversation Medium Tid"
+msgstr "Kommunikation Medium Tid"
 
 #. Label of the communication_medium_type (Select) field in DocType
 #. 'Communication Medium'
 #: erpnext/communication/doctype/communication_medium/communication_medium.json
 msgid "Communication Medium Type"
-msgstr "Konversation Medium Typ"
+msgstr "Komunikation Medium Typ"
 
 #: erpnext/setup/install.py:100
 msgid "Compact Item Print"
@@ -23638,7 +23638,7 @@ msgstr "Om vald Stycklista har angivna Åtgärder kommer system att hämta alla 
 #. Medium'
 #: erpnext/communication/doctype/communication_medium/communication_medium.json
 msgid "If there is no assigned timeslot, then communication will be handled by this group"
-msgstr "Om det inte finns någon tilldelad tid kommer korrespondens att hanteras av denna grupp"
+msgstr "Om det inte finns någon tilldelad tid kommer kommunikation att hanteras av denna grupp"
 
 #: erpnext/edi/doctype/code_list/code_list_import.js:23
 msgid "If there is no title column, use the code column for the title."
