fix: Serbian (Latin) translations

--- a/erpnext/locale/sr_CS.po
+++ b/erpnext/locale/sr_CS.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: frappe\n"
 "Report-Msgid-Bugs-To: hello@frappe.io\n"
 "POT-Creation-Date: 2025-05-25 09:35+0000\n"
-"PO-Revision-Date: 2025-05-25 20:35\n"
+"PO-Revision-Date: 2025-05-27 20:41\n"
 "Last-Translator: hello@frappe.io\n"
 "Language-Team: Serbian (Latin)\n"
 "MIME-Version: 1.0\n"
@@ -379,7 +379,7 @@ msgstr "(K) Vrednovanje = Vrednost (D) ÷ Količina (A)"
 #. DocType 'Budget'
 #: erpnext/accounts/doctype/budget/budget.json
 msgid "(Purchase Order + Material Request + Actual Expense)"
-msgstr ""
+msgstr "(Nabavna porudžbina + Zahtev za nabavku + Stvarni trošak)"
 
 #. Description of the 'From No' (Int) field in DocType 'Share Transfer'
 #. Description of the 'To No' (Int) field in DocType 'Share Transfer'
@@ -2282,7 +2282,7 @@ msgstr "Mesečno akumulirano"
 
 #: erpnext/controllers/budget_controller.py:417
 msgid "Accumulated Monthly Budget for Account {0} against {1} {2} is {3}. It will be collectively ({4}) exceeded by {5}"
-msgstr ""
+msgstr "Akumulirani mesečni budžet za račun {0} protiv {1} {2} iznosi {3}. Ukupno ({4}) će biti premašen za {5}"
 
 #: erpnext/controllers/budget_controller.py:324
 msgid "Accumulated Monthly Budget for Account {0} against {1}: {2} is {3}. It will be exceeded by {4}"
@@ -2366,7 +2366,7 @@ msgstr "Radnja ukoliko je mesečni budžet premašen prema narudžbenicama"
 #. (Select) field in DocType 'Budget'
 #: erpnext/accounts/doctype/budget/budget.json
 msgid "Action if Accumulative Monthly Budget Exceeded on Cumulative Expense"
-msgstr ""
+msgstr "Radnja ukoliko akumulirani mesečni budžet bude premašen na osnovu kumulativnog troška"
 
 #. Label of the action_if_annual_budget_exceeded (Select) field in DocType
 #. 'Budget'
@@ -2390,7 +2390,7 @@ msgstr "Radnja ukoliko je godišnji budžet premašen prema narudžbenicama"
 #. in DocType 'Budget'
 #: erpnext/accounts/doctype/budget/budget.json
 msgid "Action if Anual Budget Exceeded on Cumulative Expense"
-msgstr ""
+msgstr "Radnja ukoliko je godišnji budžet premašen po kumulativnim troškovima"
 
 #. Label of the maintain_same_rate_action (Select) field in DocType 'Selling
 #. Settings'
@@ -2401,7 +2401,7 @@ msgstr "Radnja ukoliko ista cena nije održana tokom prodajnog ciklusa"
 #. Label of the action_on_new_invoice (Select) field in DocType 'POS Profile'
 #: erpnext/accounts/doctype/pos_profile/pos_profile.json
 msgid "Action on New Invoice"
-msgstr ""
+msgstr "Radnja prilikom nove fakture"
 
 #. Label of the actions (Section Break) field in DocType 'Supplier Scorecard
 #. Scoring Standing'
@@ -4605,7 +4605,7 @@ msgstr "Alternativno, možete preuzeti šablon i dodati Vaše podatke."
 #. Profile'
 #: erpnext/accounts/doctype/pos_profile/pos_profile.json
 msgid "Always Ask"
-msgstr ""
+msgstr "Uvek pitaj"
 
 #. Label of the amended_from (Link) field in DocType 'Bank Guarantee'
 #. Label of the amended_from (Link) field in DocType 'Bank Transaction'
@@ -5161,7 +5161,7 @@ msgstr "Godišnje fakturisanje: {0}"
 
 #: erpnext/controllers/budget_controller.py:441
 msgid "Annual Budget for Account {0} against {1} {2} is {3}. It will be collectively ({4}) exceeded by {5}"
-msgstr ""
+msgstr "Godišnji budžet za račun {0} protiv {1} {2} iznosi {3}. Ukupno ({4}) će biti premašen za {5}"
 
 #: erpnext/controllers/budget_controller.py:311
 msgid "Annual Budget for Account {0} against {1}: {2} is {3}. It will be exceeded by {4}"
@@ -5306,7 +5306,7 @@ msgstr "Primenjivo ako je kompanija preduzetnik ili preduzetnik paušalac"
 #. 'Budget'
 #: erpnext/accounts/doctype/budget/budget.json
 msgid "Applicable on Cumulative Expense"
-msgstr ""
+msgstr "Primenjivo na kumulativni trošak"
 
 #. Label of the applicable_on_material_request (Check) field in DocType
 #. 'Budget'
@@ -9047,7 +9047,7 @@ msgstr "Dužina kabla (US)"
 #: erpnext/accounts/report/accounts_payable/accounts_payable.js:65
 #: erpnext/accounts/report/accounts_receivable/accounts_receivable.js:94
 msgid "Calculate Ageing With"
-msgstr ""
+msgstr "Izračunaj zastarelost sa"
 
 #. Label of the calculate_based_on (Select) field in DocType 'Shipping Rule'
 #: erpnext/accounts/doctype/shipping_rule/shipping_rule.json
@@ -12396,7 +12396,7 @@ msgstr "Kontrolna radnja"
 #. field in DocType 'Budget'
 #: erpnext/accounts/doctype/budget/budget.json
 msgid "Control Action for Cumulative Expense"
-msgstr ""
+msgstr "Kontrolna radnja za kumulativni trošak"
 
 #. Label of the control_historical_stock_transactions_section (Section Break)
 #. field in DocType 'Stock Settings'
@@ -17316,7 +17316,7 @@ msgstr "Isplaćeno"
 #. Profile'
 #: erpnext/accounts/doctype/pos_profile/pos_profile.json
 msgid "Discard Changes and Load New Invoice"
-msgstr ""
+msgstr "Odbaci promene i učitaj novu fakturu"
 
 #. Label of the discount (Float) field in DocType 'Payment Schedule'
 #. Label of the discount (Float) field in DocType 'Payment Term'
@@ -17638,7 +17638,7 @@ msgstr "Datum otuđenja"
 
 #: erpnext/assets/doctype/asset/depreciation.py:824
 msgid "Disposal date {0} cannot be before {1} date {2} of the asset."
-msgstr ""
+msgstr "Datum otuđenja {0} ne može biti pre {1} datuma {2} za imovinu."
 
 #. Label of the distance (Float) field in DocType 'Delivery Stop'
 #: erpnext/stock/doctype/delivery_stop/delivery_stop.json
@@ -23131,7 +23131,7 @@ msgstr "Sakrij slike"
 
 #: erpnext/selling/page/point_of_sale/pos_controller.js:282
 msgid "Hide Recent Orders"
-msgstr ""
+msgstr "Sakrij nedavne naloge"
 
 #. Label of the hide_unavailable_items (Check) field in DocType 'POS Profile'
 #: erpnext/accounts/doctype/pos_profile/pos_profile.json
@@ -23566,7 +23566,7 @@ msgstr "Ukoliko je omogućeno, sistem će dozvoliti odabir jedinica mere u proda
 #. in DocType 'Buying Settings'
 #: erpnext/buying/doctype/buying_settings/buying_settings.json
 msgid "If enabled, the system will generate an accounting entry for materials rejected in the Purchase Receipt."
-msgstr ""
+msgstr "Ukoliko je omogućeno, sistem će generisati računovodstveni unos za odbijeni materijal u prijemnici nabavke."
 
 #. Description of the 'Do Not Use Batch-wise Valuation' (Check) field in
 #. DocType 'Stock Settings'
@@ -25705,7 +25705,7 @@ msgstr "Kompozitna imovina"
 #. Label of the is_composite_component (Check) field in DocType 'Asset'
 #: erpnext/assets/doctype/asset/asset.json
 msgid "Is Composite Component"
-msgstr ""
+msgstr "Kompozitna komponenta"
 
 #. Label of the is_consolidated (Check) field in DocType 'Sales Invoice'
 #: erpnext/accounts/doctype/sales_invoice/sales_invoice.json
@@ -28803,11 +28803,11 @@ msgstr "Učitaj sve kriterijume"
 
 #: erpnext/accounts/doctype/pos_closing_entry/pos_closing_entry.js:92
 msgid "Loading Invoices! Please Wait..."
-msgstr "Učitvanje faktura! Molimo Vas sačekajte..."
+msgstr "Učitavanje faktura! Molimo Vas sačekajte..."
 
 #: erpnext/accounts/doctype/bank_statement_import/bank_statement_import.js:290
 msgid "Loading import file..."
-msgstr "Učitvanje fajlova za uvoz..."
+msgstr "Učitavanje fajlova za uvoz..."
 
 #. Option for the 'Reference Type' (Select) field in DocType 'Journal Entry
 #. Account'
@@ -46940,7 +46940,7 @@ msgstr "Sačuvaj"
 #. Profile'
 #: erpnext/accounts/doctype/pos_profile/pos_profile.json
 msgid "Save Changes and Load New Invoice"
-msgstr ""
+msgstr "Sačuvaj promene i učitaj novu fakturu"
 
 #: erpnext/templates/includes/order/order_taxes.html:34
 #: erpnext/templates/includes/order/order_taxes.html:85
@@ -48715,7 +48715,7 @@ msgstr "Postavite stopu vrednovanja na osnovu izvornog skladišta"
 #. DocType 'Buying Settings'
 #: erpnext/buying/doctype/buying_settings/buying_settings.json
 msgid "Set Valuation Rate for Rejected Materials"
-msgstr ""
+msgstr "Postavi stopu vrednovanja za odbijene materijale"
 
 #: erpnext/selling/doctype/sales_order/sales_order.js:227
 msgid "Set Warehouse"
@@ -60357,7 +60357,7 @@ msgstr "Morate omogućiti automatsko ponovno naručivanje u podešavanjima zalih
 
 #: erpnext/selling/page/point_of_sale/pos_controller.js:293
 msgid "You have unsaved changes. Do you want to save the invoice?"
-msgstr ""
+msgstr "Imate nesačuvane promene. Da li želite da sačuvate fakturu?"
 
 #: erpnext/templates/pages/projects.html:132
 msgid "You haven't created a {0} yet"
