fix: Serbian (Latin) translations

--- a/erpnext/locale/sr_CS.po
+++ b/erpnext/locale/sr_CS.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: frappe\n"
 "Report-Msgid-Bugs-To: hello@frappe.io\n"
 "POT-Creation-Date: 2025-06-01 09:36+0000\n"
-"PO-Revision-Date: 2025-06-01 21:35\n"
+"PO-Revision-Date: 2025-06-03 22:20\n"
 "Last-Translator: hello@frappe.io\n"
 "Language-Team: Serbian (Latin)\n"
 "MIME-Version: 1.0\n"
@@ -22355,7 +22355,7 @@ msgstr "Prikazivanje otpisanih stavki"
 #. Option for the 'Coupon Type' (Select) field in DocType 'Coupon Code'
 #: erpnext/accounts/doctype/coupon_code/coupon_code.json
 msgid "Gift Card"
-msgstr "Poklon kartica"
+msgstr "Poklon-kartica"
 
 #. Description of the 'Recurse Every (As Per Transaction UOM)' (Float) field in
 #. DocType 'Pricing Rule'
@@ -25949,7 +25949,7 @@ msgstr "Izlazno"
 #. Label of the is_packed (Check) field in DocType 'Serial and Batch Bundle'
 #: erpnext/stock/doctype/serial_and_batch_bundle/serial_and_batch_bundle.json
 msgid "Is Packed"
-msgstr ""
+msgstr "Upakovana stavka"
 
 #. Label of the is_paid (Check) field in DocType 'Purchase Invoice'
 #: erpnext/accounts/doctype/purchase_invoice/purchase_invoice.json
@@ -35260,7 +35260,7 @@ msgstr "Detalji stranke"
 #. Label of the party_full_name (Data) field in DocType 'Contract'
 #: erpnext/crm/doctype/contract/contract.json
 msgid "Party Full Name"
-msgstr ""
+msgstr "Pun naziv stranke"
 
 #. Label of the bank_party_iban (Data) field in DocType 'Bank Transaction'
 #: erpnext/accounts/doctype/bank_transaction/bank_transaction.json
