feat: schedule update  opportunity

--- a/erpnext/translations/vi.csv
+++ b/erpnext/translations/vi.csv
@@ -8785,4 +8785,7 @@ Contact Information, Thông tin liên lạc
 Address Information, Thông tin địa chỉ
 Lead Status, Trạng thái tiềm năng
 Customer Rank, Xếp hạng
-Created Date
+Hot Opportunity, Cơ hội nóng
+Warn Opportunity, Cơ hội ấm
+Cold Opportunity, Cơ hội lạnh
+Probability, Xác suất
